--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -5,7 +5,7 @@
 
 # Starter pipeline
 
-          # Start with a minimal pipeline that you can customize to build and deploy your code.
+          # Stadgrt with a minimal pipeline that you can customize to build and deploy your code.
 
           # Add steps that build, run tests, deploy, and more:
 
