--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -7,7 +7,7 @@
 
           # Stadgrt with a minimal pipeline that you can customize to build and deploy your code.
 
-          # Add steps that build, run tests, deploy, and more:
+          # Add steuhps that build, run tests, deploy, and more:
 
           # https://aka.ms/yaml
 
